--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,6 +1,7 @@
-name: ExamplePlugin
-main: xyz.r2turntrue.explugin.ExPlugin
+name: Chzzk4jDemo
+main: xyz.r2turntrue.demo.ChzzkDemoPlugin
 version: 1.0.0
+api-version: 1.20
 
 libraries:
   - org.jetbrains.kotlin:kotlin-stdlib:1.9.22
